dsm 2.3.3
------------------

* To improve consistency in functions in the package, some functions have changed from . separation to _. An error is now thrown when the "old" arguments/functions using . are used. This error will be removed in dsm 2.3.4.
  - dsm.var.prop -> dsm_var_prop
  - dsm.var.gam -> dsm_var_gam
  - dsm.var.movblk -> dsm_var_movblk
  - dsm.cor -> dsm_cor
  - rqgam.check -> rqgam_check
  - vis.concurvity -> vis_concurvity

dsm 2.3.2
------------------

* fixed bug in offset calculation in dsm_varprop se estimation where offsets were logged twice. Thanks to Megan Ferguson for spotting this.
* documentation now in rmarkdown format

dsm 2.3.1
------------------

* transect type (line or point) is now determined from the detection function rather than using the transect= argument
* multiple detection functions are now possible, use a list() of fitted detection functions supplied to ddf.obj= argument to dsm(). dsm.var.gam, dsm.var.prop and dsm_varprop are compatible. Vignette coming soon. Thanks to Dave Fifield and Ewan Wakefield for extensive testing and suggestions. See ?"dsm-data" for more information on how to set up your data.
* strip transects now handled using the dummy_ddf() function.
* presence~ response type removed
* Response options "D", "density", "Dhat", "N", "Nhat" and "n" deprecated. Now only "count", "abundance.est" and "density.est" are allowed.
* Make predict.dsm work with tibbles when off.set is not a column in newdata (error is thrown in previous code's check of this). Thanks to Dave Fifield for reporting this issue.
* Fix bug with inconsistent predictions when density.est is used as the response. Code in predict.dsm has been simplified and documentation updated. Thanks to Dave Fifield for reporting this issue.